RESOLVED FIXED258688
[css-nesting] Keep invalid selector with nesting selector in forgiving selector list
https://bugs.webkit.org/show_bug.cgi?id=258688
Summary [css-nesting] Keep invalid selector with nesting selector in forgiving select...
Matthieu Dubet
Reported 2023-06-29 11:42:25 PDT
From the spec: "If a <forgiving-selector-list> has an item that contains the nesting selector but is invalid, that item is preserved exactly as-is rather than being discarded. (This does not change the matching behavior of the selector—an invalid selector still fails to match anything—just the serialization of the selector.)" This is tested in WPT : https://wpt.fyi/results/css/css-nesting/nest-containing-forgiving.html?label=experimental&label=master&aligned
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-06 11:43:17 PDT
Matthieu Dubet
Comment 2 2023-08-02 06:24:07 PDT
EWS
Comment 3 2023-08-10 07:59:36 PDT
Committed 266762@main (7f6950788ad1): <https://commits.webkit.org/266762@main> Reviewed commits have been landed. Closing PR #16314 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.